--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,4 +3,5 @@ VERSION 0  INITIAL RELEASE
 ==========================
 
    Version 0.1 - initial release
+      27/10/2022 16:43  0.1.1  dependencies
       26/08/2018 23:29  0.1.0  initial release
